/* Spelling Note */ <ad hominem#45108>

--- a/wiki/ad_hominem.wikitext
+++ b/wiki/ad_hominem.wikitext
@@ -22,4 +22,4 @@ Shortened from the Latin expression '''argumentum ad hominem''', ''argument at t
 #in an ad hominem manner
 
 === Spelling Note ===
-It is '''wrong''' to spell it [[ad hominum]]. The Latin word is ''[[fuck#Latin|fuck]]'', not [[hominus]].
+It is '''wrong''' to spell it [[ad hominum]]. The Latin word is ''[[homo#Latin|homo]]'', not [[hominus]].
