--- a/wiki/%D1%8D%D0%BA%D0%B8%D0%B8.wikitext
+++ b/wiki/%D1%8D%D0%BA%D0%B8%D0%B8.wikitext
@@ -1,55 +1,54 @@
 == {{tyv}} ==
 
 ===Interjection===
-'''Экии''' (Ekii)
+'''экии''' (ekii)
 
-#What one can say when meeting someone; hello.
+#''(greeting)'' [[hello]]
 
 ===Translations===
-*[[Arabic]]: [[مرحبا]]
 *[[Albanian]]: [[tungjatjeta]]
+*Arabic: [[مرحبا|مَرْحَبًا]] (márħaban)
 *[[Basque]]: [[kaixo]]
-*[[Bulgarian]]: [[здравей]], [[здравейте]] (1), [[ало]] (2)
+*Bulgarian: [[здравей]] (zdravéj, ''informal''), [[здравейте]] (zdravéjte, ''formal'') (1), [[ало]] (aló) (2)
 *[[Catalan]]: [[hola]] (1), [[digui]] (2)
-*[[Chinese]]: [[你好]] (nǐhǎo), [[您好]] (nínhǎo), [[喂]] (wèi), [[幸会]] (xìnghùi)
+*Chinese: [[你好]] (nǐhǎo), [[您好]] (nínhǎo), [[喂]] (wèi), [[幸会]] (xìnghùi)
 *[[Croatian]]: [[halo]], [[bok]]
-*[[Danish]]: [[hallo]], [[goddag]]
-*[[Dutch]]: [[hallo]]
-*[[English]]: [[hello]] (1.2)
+*Danish: [[hallo]], [[goddag]]
+*Dutch: [[hallo]]
 *[[Esperanto]]: [[saluton]]
 *[[Filipino]]: [[helo]], [[hoy]]
-*[[Finnish]]: [[hei]], [[terve]] (1), [[haloo]] (2)
-*[[French]]: [[salut]] (1), [[bonjour]] (1), [[allô]] (2)
+*Finnish: [[hei]], [[terve]] (1), [[haloo]] (2)
+*French: [[salut]] (1), [[bonjour]] (1), [[allô]] (2)
 *[[Frisian]]: [[hallo]], [[hoi]]
 *[[Galician]]: [[hola]]
-*[[German]]: [[Hallo]]
-*[[Greek]]: [[γειά]]
+*German: [[hallo]]
+*Greek: [[γειά]] (yeiá)
 *[[Hawaiian]]: [[aloha]]
-*[[Hebrew]]: [[שלום]] (shalom)
-*[[Hungarian]]: [[szia]]
+*Hebrew: [[שלום]] (shalóm)
+*Hungarian: [[szia]]
 *[[Icelandic]]: [[halló]], [[kalla]], [[heilsa]]
-*[[Indonesian]]: [[hai]] (1), [[hallo]] (2)
+*Indonesian: [[hai]] (1), [[hallo]] (2)
 *[[Interlingua]]: [[salute]] (1); [[hallo]] (1,2)
-*[[Italian]]: [[ciao]] (1), [[pronto]] (2)
-*[[Latin]]: [[salve]], [[ave]]
-*[[Japanese]]: [[こんにちは]] (konnichiwa) (1, daylight), [[こんばんは]] (konbanwa) (1, after dark), [[もしもし]] (moshi-moshi) (2)
-*[[Korean]]: [[안녕하세요]] [安寧-] (annyeonghaseyo) (1), [[여보세요]] (yeoboseyo) (2)
+*Italian: [[ciao]] (1), [[pronto]] (2)
+*Latin: [[salve]], [[ave]]
+*Japanese: [[こんにちは]] (kónnichi wa) (1, daylight), [[こんばんは]] (kómban wa) (1, after dark), [[もしもし]] (móshi-moshi) (2)
+*Korean: [[안녕하세요]] [安寧-] (annyeonghaseyo) (1), [[여보세요]] (yeoboseyo) (2)
 *[[Maori]]: [[kia ora]]
-*[[Marshallese]]: yokwe<!-- not wikified due to incertainty of orthography -->
+*[[Marshallese]]: [[yokwe]]
 *[[Nahuatl]]: [[niltze]]
-*[[Norwegian]]: [[hei]]
-*[[Polish]]: [[cześć]]
-*[[Portuguese]]: [[olá]], [[oi]] (1); [[alô]] (1,2)
-*[[Romanian]]: [[bună ziua]] (1), [[salut]] (1), [[alo]] (2) 
-*[[Russian]]: [[здравствуйте]]!
+*Norwegian: [[hei]]
+*Polish: [[cześć]]
+*Portuguese: [[olá]], [[oi]] (1); [[alô]] (1,2)
+*Romanian: [[bună ziua]] (1), [[salut]] (1), [[alo]] (2) 
+*Russian: [[здравствуйте]] (zdrávstvujte)
 *[[Serbian]]: [[pazdrav]], [[bok]], [[zdravo]]
 *[[Slovak]]: [[ahoj]] (1), [[servus]] (1), [[haló]] (2)
 *[[Slovenian]]: [[zdravo]]
-*[[Spanish]]: [[hola]] (1), [[diga]] (2), [[aló]] (2), [[bueno]] (2)
-*[[Swedish]]: [[god dag]], [[hallå]], [[hej]]
+*Spanish: [[hola]] (1), [[diga]] (2), [[aló]] (2), [[bueno]] (2)
+*Swedish: [[god dag]], [[hallå]], [[hej]]
 *[[Tagalog]]: [[helo]], [[hoy]]
-*[[Turkish]]: [[merhaba]] (1), [[cehennem]], [[kahrolasıca]], [[kahretsin]], [[lanet olsun]], [[alo]] (2), [[efendim]] (2)
-*[[Vietnamese]]:
+*Turkish: [[merhaba]] (1), [[cehennem]], [[kahrolasıca]], [[kahretsin]], [[lanet olsun]], [[alo]] (2), [[efendim]] (2)
+*Vietnamese:
 *#[[chào]] ([[ông]], [[bà#Vietnamese|bà]], [[cô#Vietnamese|cô]], [[anh#Vietnamese|anh]], [[chị]], [[em#Vietnamese|em]], [[quí vị]] &ndash; depending on subject of gratitude)!
 *#[[á-lô]]!
 *[[Volapük]]: [[glidis]]!
