--- a/wiki/elephas.wikitext
+++ b/wiki/elephas.wikitext
@@ -1,3 +1,16 @@
+==English==
+===Etymology===
+Greek
+===Proper noun===
+{{wikipedia}}
+'''Elephas'''
+#a [[taxonomic]] [[genus]], within [[family]] [[Elephantidae]] - the Asian elephant
+===Related terms===
+{{wikispecies}}
+*[[species]]
+**[[Elephas maximus]]
+
+----
 ==Latin==
 [[Category:Latin mammals]]
 ===Noun===
