--- a/wiki/%D1%8D%D0%BA%D0%B8%D0%B8.wikitext
+++ b/wiki/%D1%8D%D0%BA%D0%B8%D0%B8.wikitext
@@ -49,6 +49,6 @@
 *[[Tagalog]]: [[helo]], [[hoy]]
 *Turkish: [[merhaba]] (1), [[cehennem]], [[kahrolasıca]], [[kahretsin]], [[lanet olsun]], [[alo]] (2), [[efendim]] (2)
 *Vietnamese:
-*#[[chào]] ([[ông]], [[bà#Vietnamese|bà]], [[cô#Vietnamese|cô]], [[anh#Vietnamese|anh]], [[chị]], [[em#Vietnamese|em]], [[quí vị]] &ndash; depending on subject of gratitude)!
+*#[[chào]] ([[ông]], [[bà#Vietnamese|bà]], [[cô#Vietnamese|cô]], [[anh#Vietnamese|anh]], [[chị]], [[em#Vietnamese|em]], [[quí vị]] &ndash; depending on gender and social status of person addressed)!
 *#[[á-lô]]!
 *[[Volapük]]: [[glidis]]!
