Add link to Wikipedia <brass monkey#65064>

--- a/wiki/brass_monkey.wikitext
+++ b/wiki/brass_monkey.wikitext
@@ -6,7 +6,7 @@
 #:''It's brass monkey weather today, isn't it?''
 
 ===Etymology===
-From the phrase '''[[cold enough to freeze the balls off a brass monkey]]'''
+From the phrase '''[[cold enough to freeze the balls off a brass monkey]]'''.  See [[w:Brass Monkey|Wikipedia]] for details.
 
 ===Adjective phrase===
 '''brass monkey''' (''no [[comparative]] or [[superlative]], used only before the noun'')
