/* Category:Russian nouns */ <электронный#74007>

--- a/wiki/%D1%8D%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D0%BD%D0%BD%D1%8B%D0%B9.wikitext
+++ b/wiki/%D1%8D%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D0%BD%D0%BD%D1%8B%D0%B9.wikitext
@@ -1,6 +1,14 @@
-Russian Language
-АБВГДЕЖЗИКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ
-абвгдежзийклмнопрстуфхцчшщъыьэюя
-Greece Language
-ΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ
-αάβγδεέζηήθιίκλμνξοόπρσςτυύφχψωώ
+==Russian==
+[[Category:Russian adjectives]]
+===Adjective===
+'''электронный''', электронная, электронное, электронные (elektrónnyj, elektrónnaja, elektrónnoje, elektrónnyje) ''m/f/n/pl''
+
+#''(physics)'' [[electron]], [[electronic]]
+#:электронная лампа (elektrónnaja lámpa) — ''electron tube; vacuum tube''
+#:электронный луч (elektrónnyj luč) — ''electron beam''
+#:электронное облако (elektrónnoje óblako) — ''electron cloud''
+#:электронная пушка (elektrónnaja púška) — ''electron gun''
+#:электронное сродство (elektrónnoje sródstvo) — ''electron affinity''
+#:электронная теория (elektrónnaja teórija) — ''electron theory''
+#:электронная физика (elektrónnaja fízika) — ''electron physics''
+#:электронная формула (elektrónnaja fórmula) — ''electronic formula''
