--- a/wiki/carbon.wikitext
+++ b/wiki/carbon.wikitext
@@ -32,6 +32,7 @@
 *[[Korean]]: 탄소 (kanso)
 *[[Marathi]]: कर्ब (karba)
 *[[Punjabi]]: ਕਾਰਬਨ (kārabana)
+*[[Polish]]: węgiel
 *[[Sasxsek]]: karapon
 *[[Tamil]]: காபன் (kāpan)
 *[[Thai]]: คาร์บอน (khārbxn)
