--- a/wiki/Prydain.wikitext
+++ b/wiki/Prydain.wikitext
@@ -1,4 +1,4 @@
-'''Prydain''' or '''Prydein''' is the [[Welsh]] name of the island of [[Britain]].
+'''Prydain''' or '''Prydein''' is the [[Welsh language|Welsh]] name for the island of [[Britain]].
 
 In mediaeval texts (e.g. the [[Mabinogion]]), the term often refers to the northenmost part of the island, beyond the [[Forth]] and [[Clyde]]: where the island as a whole is meant, the phrase ''Ynys Prydain'' (Isle of Prydain) is commonly used. Compare [[Albion]] and [[Alba]] for a similar distinction.
 
