--- a/wiki/mesa.wikitext
+++ b/wiki/mesa.wikitext
@@ -1,12 +1,16 @@
 ==English==
 
-===Noun===
-'''mesa'''
-
-# flat area of land higher than other land, like the surface of a table is above the floor; table land
-
 ===Etymology===
-From Spanish ''mesa'', '''table'''
+First attested [[w:1759|1759]], from {{Sp.}} [[mesa]], "[[table]]," from {{L.}} [[mensa]], "[[table]]."
+
+===Pronunciation===
+*[[AHD]]: [māsə]
+
+===Noun===
+'''mesa''' {{wikipedia}}
+#Flat area of land or [[plateau]] higher than other land, with one or more [[clifflike]] edges
+#: ''" A few more miles of hot sand and [[gravel]] and red stone brought us around a low [[mesa]] to the [[Little Colorado]]."''
+#A city in [[Maricopa County]], [[Arizona]]; the second largest city in the [[metropolitan area]] of [[Phoenix]] and the third largest city in Arizona.
 
 ===Translations===
 *Spanish: [[#Spanish|mesa]]
