added Danish <due#26033>

--- a/wiki/due.wikitext
+++ b/wiki/due.wikitext
@@ -26,6 +26,12 @@
 
 #[[two]]
 
+==Danish==
+===Noun===
+'''due''' (''plural'' '''duer''')
+
+#[[pigeon]]; [[dove]]
+
 <!--do not put non-English translations in foreign-language entries-->
 
 [[gl:Due]]
