--- a/wiki/payment.wikitext
+++ b/wiki/payment.wikitext
@@ -10,6 +10,7 @@
 #(''countable'') A sum of [[money]] [[pay|paid]] in exchange for [[goods]] or [[service]]s.
 
 ===Translations===
+*Basque: ordainketa (1), ordaintze (1), ordain (2)
 *Dutch: [[betaling]] ''f''
 *Finnish: [[maksu]]
 *French: [[paiement]] ''m'', [[payement]] ''m''
