--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -2,7 +2,7 @@ A '''God complex''' is a term used to characterize [[arrogant]], individuals pro
 
 ==God complexes and man-made disasters==
 
-In direct proportion to a given disparity of [[wealth]] and [[power]], the opportunities escalate for individuals to assume [[inhuman]], and sometimes [[inhumane]], [[dominionist|dominion]] over others.  God complexes are sometimes blamed for monumental man made disasters, including [[global warming]] and the apparently escalating prevalence of [[autism epidemic|autism]] diagnoses.  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters, or compound the tradedy of natural disasters.
+In direct proportion to a given disparity of [[wealth]] and [[power]], the opportunities escalate for individuals to assume [[inhuman]], and sometimes [[inhumane]], [[dominionist|dominion]] over others.  God complexes are sometimes blamed for monumental man made disasters.  As wealth and power is consolidated into the hands of individuals at the helm of ever larger organizations and nations, it has become increasingly evident that powerful, and generally very intelligent, people sometimes do incredibly stupid things that contribute to man-made disasters, or compound the tradedy of natural disasters.
 
 ==Scholarly research==
 
