formatted translations <payment#5609>

--- a/wiki/payment.wikitext
+++ b/wiki/payment.wikitext
@@ -10,13 +10,25 @@
 #(''countable'') A sum of [[money]] [[pay|paid]] in exchange for [[goods]] or [[service]]s.
 
 ===Translations===
-*Basque: ordainketa (1), ordaintze (1), ordain (2)
+'''the act of paying'''
+{{top}}
+*Basque: [[ordainketa]], [[ordaintze]]
 *Dutch: [[betaling]] ''f''
 *Finnish: [[maksu]]
 *French: [[paiement]] ''m'', [[payement]] ''m''
 *German: [[Bezahlung]] ''f''
+{{mid}}
 *Indonesian: [[bayar|pembayaran]]
 *Italian: [[pagamento]] ''m''
 *Japanese: [[支払い]] (しはらい, shiharai)
 *Spanish: [[pago]]
+{{bottom}}
+
+
+'''a sum of money paid in exchange for goods or services'''
+{{top}}
+*Basque: [[ordain]]
+{{mid}}
+{{bottom}}
+
 [[Category:1000 English basic words]]
