format /* Pronunciation */, added AHD pronunciation <payment#5609>

--- a/wiki/payment.wikitext
+++ b/wiki/payment.wikitext
@@ -1,7 +1,9 @@
 ==English==
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'peIm@nt/
-*[[w:IPA|IPA]]: /'peɪmənt/
+*{{SAMPA}} /'peIm@nt/
+*{{IPAlink}} {{IPA|/'peɪmənt/}}
+*{{AHD|/pāmĕnt/}}
+aeronausiphobia
 
 ===Noun===
 '''payment''' (''[[countable]] and [[uncountable]]''; ''plural'' '''payments''')
