Reinstated categories <dog#3649675>

--- a/wiki/dog.wikitext
+++ b/wiki/dog.wikitext
@@ -10,6 +10,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 [[Image:Beagle.png|thumb|A dog (a [[beagle]])]]
 
 === Noun ===
+[[Category:English nouns]]
 [[Category:Mammals]]
 '''dog''' (''Plural:'' [[dogs]])
 
@@ -237,7 +238,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 ''See [[andiron]]''
 
 ===Transitive verb===
-
+[[Category:English transitive verbs]]
 {{en-infl-reg-consonant|dog||g}}
 
 #To go after with the intent to catch.
@@ -281,6 +282,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 *[[w:IPA|IPA]]: /dɔx/
 
 ===Noun===
+[[Category:Dutch nouns]]
 '''dog''' ''m'' (''Plural:'' [[doggen]])
 
 #[[mastiff]]
@@ -291,17 +293,16 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 ----
 
 ==Swedish==
-===Verb===
+===Verb form===
 '''dog'''
 
 #(''past tense of [[dö]]'') [[die]]d
-
-----
 
 ==Mbabaram==
 === Etymology ===
 Not a borrowing from English, but an independent and regular development from the proto-Australian word *'''gudaga''', thus: Mbabaram '''dog''' < *'''dwog(a)''' < *'''udwoga''' < *'''gudwaga''' < proto-Australian *'''gudaga'''. Cf. [[Dyirbal]] '''guda'''.
 ===Noun===
+[[Category:Mbabaram nouns]]
 '''dog'''
 
 #dog
