/* Translations */ 「よい旅行を持ちなさい」などどは絶対言わない: poor translation <bon voyage#58434>

--- a/wiki/bon_voyage.wikitext
+++ b/wiki/bon_voyage.wikitext
@@ -8,12 +8,14 @@ French: ''[[bon]]'', good, and ''[[voyage#French|voyage]]'', journey.
 #Used to wish someone a good journey.
 
 ====Translations====
+*Chinese: [[一路平安]], [[一路顺风]]/[[一路順風]]
 *French: bon voyage
 *Greek, Modern: [[καλό ταξίδι]]
 *Italian: [[buon viaggio]]
-*Japanese: よい旅行を持ちなさい
+*Japanese: どうぞご無事で, [[道中ご無事で]]
 
 ----
+
 ==French==
 ===Interjection phrase===
 '''bon voyage!'''
