--- a/wiki/fatty_acid.wikitext
+++ b/wiki/fatty_acid.wikitext
@@ -15,7 +15,7 @@
 *[[stearic acid]] - C<sub>18</sub>
 *[[arachidic acid]] - C<sub>20</sub>
 *[[palmitoleic acid]] - C<sub>16</sub> unsaturated
-*[[olic acid]] - C<sub>18</sub> unsaturated
+*[[oleic acid]] - C<sub>18</sub> unsaturated
 *[[linoleic acid]] - C<sub>18</sub> diunsaturated
 *[[linolenic acid]] - C<sub>18</sub> polyunsaturated
 *[[arachidonic acid]] - C<sub>20</sub> polyunsaturated
