--- a/wiki/pago.wikitext
+++ b/wiki/pago.wikitext
@@ -13,3 +13,23 @@
 *[[German]]: [[Buche]] ''f''
 
 ----
+
+==Italian==
+===Verb form===
+'''pago'''
+
+# ''first-person singular indicative present of [[pagare]]''
+
+====See also====
+*[[pagò]]
+
+===Adjective===
+'''pago''' (''m plural'' paghi)
+
+# [[contented]]
+
+===Noun===
+'''pago''' ''m''
+
+# (''archaic'') [[pay]], [[fee]]
+# (''archaic'') [[price]]
