/* Conjugation */ <inasmuch as#97794>

--- a/wiki/inasmuch_as.wikitext
+++ b/wiki/inasmuch_as.wikitext
@@ -2,6 +2,6 @@
 ===Conjugation===
 '''inasmuch as'''
 # because of the fact that; since
-#:'' '''inasmuch as''' I already know you, I shall call you Jim, not James.''
+#:'' '''Inasmuch as''' I already know you, I shall call you Jim, not James.''
 # to the extent that; insofar as
 #:''You will improve, only '''inasmuch as''' as you practice.''
