--- a/wiki/pago.wikitext
+++ b/wiki/pago.wikitext
@@ -5,12 +5,7 @@
 
 === Noun ===
 
-#Beech, a shade tree of the genus ''Fagus''.
-
-=== Translations ===
-*[[Basque]]: [http://eu.wiktionary.org/wiki/pago pago]
-*[[English]]: [[beech]]
-*[[German]]: [[Buche]] ''f''
+# [[Beech]], a shade tree of the genus ''Fagus''.
 
 ----
 
@@ -33,3 +28,4 @@
 
 # (''archaic'') [[pay]], [[fee]]
 # (''archaic'') [[price]]
+[[eu:pago]]
