/* Conjugation */ <inasmuch as#97794>

--- a/wiki/inasmuch_as.wikitext
+++ b/wiki/inasmuch_as.wikitext
@@ -4,4 +4,4 @@
 # because of the fact that; since
 #:'' '''Inasmuch as''' I already know you, I shall call you Jim, not James.''
 # to the extent that; insofar as
-#:''You will improve, only '''inasmuch as''' as you practice.''
+#:''You will improve, only '''inasmuch as''' you practice.''
