/* Conjugation */ <inasmuch as#97794>

--- a/wiki/inasmuch_as.wikitext
+++ b/wiki/inasmuch_as.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Conjugation===
 '''inasmuch as'''
-# because of the fact that; since
+# because of the fact that; [[since]]
 #:'' '''Inasmuch as''' I already know you, I shall call you Jim, not James.''
-# to the extent that; insofar as
+# to the extent that; [[insofar as]]
 #:''You will improve, only '''inasmuch as''' you practice.''
