--- a/wiki/beech.wikitext
+++ b/wiki/beech.wikitext
@@ -12,6 +12,7 @@
 #(''also'' '''beech tree''') A tree of the genus ''Fagus'' having a smooth, light grey trunk, [[oval]], pointed leaves and many branches.
 
 ====Translations====
+*{{eu}}: [[pago]] ([http://eu.wiktionary.org/wiki/pago pago])
 *Czech: [[buk]]
 *Danish: [[bøg]]
 *Dutch: [[beuk#Dutch|beuk]]
