--- a/wiki/escandio.wikitext
+++ b/wiki/escandio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|escandio|scandium}}
+== Spanish == {{wikipediaAlt|scandium}}
+=== Noun ===
+'''escandio''' ''m''
+# [[scandium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
