--- a/wiki/hidr%C3%B3geno.wikitext
+++ b/wiki/hidr%C3%B3geno.wikitext
@@ -1,1 +1,7 @@
-{{elemento|hidrógeno|hydrogen}}
+== Spanish == {{wikipediaAlt|hydrogen}}
+=== Noun ===
+'''hidrógeno''' ''m''
+# [[hydrogen]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
