--- a/wiki/berilio.wikitext
+++ b/wiki/berilio.wikitext
@@ -1,4 +1,10 @@
-{{elemento|berilio|beryllium}}
+== Spanish == {{wikipediaAlt|beryllium}}
+=== Noun ===
+'''berilio''' ''m''
+# [[beryllium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Berilio]]
 [[sv:berilio]]
