--- a/wiki/helio.wikitext
+++ b/wiki/helio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|helio|helium}}
+== Spanish == {{wikipediaAlt|helium}}
+=== Noun ===
+'''helio''' ''m''
+# [[helium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
