--- a/wiki/carbono.wikitext
+++ b/wiki/carbono.wikitext
@@ -1,4 +1,10 @@
-{{elemento|carbono|carbon}}
+== Spanish == {{wikipediaAlt|carbon}}
+=== Noun ===
+'''carbono''' ''m''
+# [[carbon]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[es:carbono]]
 [[gl:Carbono]]
