--- a/wiki/nitr%C3%B3geno.wikitext
+++ b/wiki/nitr%C3%B3geno.wikitext
@@ -1,3 +1,9 @@
-{{elemento|nitrógeno|nitrogen}}
+== Spanish == {{wikipediaAlt|nitrogen}}
+=== Noun ===
+'''nitrógeno''' ''m''
+# [[nitrogen]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[sv:nitrógeno]]
