--- a/wiki/ox%C3%ADgeno.wikitext
+++ b/wiki/ox%C3%ADgeno.wikitext
@@ -1,3 +1,9 @@
-{{elemento|oxígeno|oxygen}}
+== Spanish == {{wikipediaAlt|oxygen}}
+=== Noun ===
+'''oxígeno''' ''m''
+# [[oxygen]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[sv:oxígeno]]
