--- a/wiki/fl%C3%BAor.wikitext
+++ b/wiki/fl%C3%BAor.wikitext
@@ -1,1 +1,7 @@
-{{elemento|flúor|fluorine}}
+== Spanish == {{wikipediaAlt|fluorine}}
+=== Noun ===
+'''flúor''' ''m''
+# [[fluorine]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
