--- a/wiki/ne%C3%B3n.wikitext
+++ b/wiki/ne%C3%B3n.wikitext
@@ -1,1 +1,7 @@
-{{elemento|neón|neon}}
+== Spanish == {{wikipediaAlt|neon}}
+=== Noun ===
+'''neón''' ''m''
+# [[neon]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
