--- a/wiki/sodio.wikitext
+++ b/wiki/sodio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|sodio|sodium}}
+== Spanish == {{wikipediaAlt|sodium}}
+=== Noun ===
+'''sodio''' ''m''
+# [[sodium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
