--- a/wiki/aluminio.wikitext
+++ b/wiki/aluminio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|aluminio|aluminum}}
+== Spanish == {{wikipediaAlt|aluminum}}
+=== Noun ===
+'''aluminio''' ''m''
+# [[aluminum]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Aluminio]]
