--- a/wiki/magnesio.wikitext
+++ b/wiki/magnesio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|magnesio|magnesium}}
+== Spanish == {{wikipediaAlt|magnesium}}
+=== Noun ===
+'''magnesio''' ''m''
+# [[magnesium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Magnesio]]
