--- a/wiki/azufre.wikitext
+++ b/wiki/azufre.wikitext
@@ -1,1 +1,7 @@
-{{elemento|azufre|sulfur}}
+== Spanish == {{wikipediaAlt|sulfur}}
+=== Noun ===
+'''azufre''' ''m''
+# [[sulfur]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
