--- a/wiki/f%C3%B3sforo.wikitext
+++ b/wiki/f%C3%B3sforo.wikitext
@@ -1,1 +1,7 @@
-{{elemento|fósforo|phosphorus}}
+== Spanish == {{wikipediaAlt|phosphorus}}
+=== Noun ===
+'''fósforo''' ''m''
+# [[phosphorus]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
