--- a/wiki/titanio.wikitext
+++ b/wiki/titanio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|titanio|titanium}}
+== Spanish == {{wikipediaAlt|titanium}}
+=== Noun ===
+'''titanio''' ''m''
+# [[titanium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
