--- a/wiki/manganeso.wikitext
+++ b/wiki/manganeso.wikitext
@@ -1,3 +1,9 @@
-{{elemento|manganeso|manganese}}
+== Spanish == {{wikipediaAlt|manganese}}
+=== Noun ===
+'''manganeso''' ''m''
+# [[manganese]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Manganeso]]
