--- a/wiki/cobre.wikitext
+++ b/wiki/cobre.wikitext
@@ -1,3 +1,9 @@
-{{elemento|cobre|copper}}
+== Spanish == {{wikipediaAlt|copper}}
+=== Noun ===
+'''cobre''' ''m''
+# [[copper]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Cobre]]
