--- a/wiki/hierro.wikitext
+++ b/wiki/hierro.wikitext
@@ -1,1 +1,7 @@
-{{elemento|hierro|iron}}
+== Spanish == {{wikipediaAlt|iron}}
+=== Noun ===
+'''hierro''' ''m''
+# [[iron]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
