--- a/wiki/cinc.wikitext
+++ b/wiki/cinc.wikitext
@@ -1,3 +1,9 @@
-{{elemento|cinc|zinc}}
+== Spanish == {{wikipediaAlt|zinc}}
+=== Noun ===
+'''cinc''' ''m''
+# [[zinc]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Cinc]]
