--- a/wiki/selenio.wikitext
+++ b/wiki/selenio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|selenio|selenium}}
+== Spanish == {{wikipediaAlt|selenium}}
+=== Noun ===
+'''selenio''' ''m''
+# [[selenium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
