--- a/wiki/germanio.wikitext
+++ b/wiki/germanio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|germanio|germanium}}
+== Spanish == {{wikipediaAlt|germanium}}
+=== Noun ===
+'''germanio''' ''m''
+# [[germanium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
