--- a/wiki/galio.wikitext
+++ b/wiki/galio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|galio|gallium}}
+== Spanish == {{wikipediaAlt|gallium}}
+=== Noun ===
+'''galio''' ''m''
+# [[gallium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
