--- a/wiki/ars%C3%A9nico.wikitext
+++ b/wiki/ars%C3%A9nico.wikitext
@@ -1,3 +1,9 @@
-{{elemento|arsénico|arsenic}}
+== Spanish == {{wikipediaAlt|arsenic}}
+=== Noun ===
+'''arsénico''' ''m''
+# [[arsenic]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Arsénico]]
