--- a/wiki/kript%C3%B3n.wikitext
+++ b/wiki/kript%C3%B3n.wikitext
@@ -1,1 +1,7 @@
-{{elemento|kriptón|krypton}}
+== Spanish == {{wikipediaAlt|krypton}}
+=== Noun ===
+'''kriptón''' ''m''
+# [[krypton]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
