--- a/wiki/rubidio.wikitext
+++ b/wiki/rubidio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|rubidio|rubidium}}
+== Spanish == {{wikipediaAlt|rubidium}}
+=== Noun ===
+'''rubidio''' ''m''
+# [[rubidium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Rubidio]]
