--- a/wiki/itrio.wikitext
+++ b/wiki/itrio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|itrio|yttrium}}
+== Spanish == {{wikipediaAlt|yttrium}}
+=== Noun ===
+'''itrio''' ''m''
+# [[yttrium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
