--- a/wiki/estroncio.wikitext
+++ b/wiki/estroncio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|estroncio|strontium}}
+== Spanish == {{wikipediaAlt|strontium}}
+=== Noun ===
+'''estroncio''' ''m''
+# [[strontium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
