--- a/wiki/circonio.wikitext
+++ b/wiki/circonio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|circonio|zirconium}}
+== Spanish == {{wikipediaAlt|zirconium}}
+=== Noun ===
+'''circonio''' ''m''
+# [[zirconium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Circonio]]
