--- a/wiki/molibdeno.wikitext
+++ b/wiki/molibdeno.wikitext
@@ -1,4 +1,10 @@
-{{elemento|molibdeno|molybdenum}}
+== Spanish == {{wikipediaAlt|molybdenum}}
+=== Noun ===
+'''molibdeno''' ''m''
+# [[molybdenum]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Molibdeno]]
 [[pl:Molibdeno]]
