--- a/wiki/tecnecio.wikitext
+++ b/wiki/tecnecio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|tecnecio|technetium}}
+== Spanish == {{wikipediaAlt|technetium}}
+=== Noun ===
+'''tecnecio''' ''m''
+# [[technetium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
