--- a/wiki/rodio.wikitext
+++ b/wiki/rodio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|rodio|rhodium}}
+== Spanish == {{wikipediaAlt|rhodium}}
+=== Noun ===
+'''rodio''' ''m''
+# [[rhodium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Rodio]]
