--- a/wiki/rutenio.wikitext
+++ b/wiki/rutenio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|rutenio|ruthenium}}
+== Spanish == {{wikipediaAlt|ruthenium}}
+=== Noun ===
+'''rutenio''' ''m''
+# [[ruthenium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Rutenio]]
