--- a/wiki/cadmio.wikitext
+++ b/wiki/cadmio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|cadmio|cadmium}}
+== Spanish == {{wikipediaAlt|cadmium}}
+=== Noun ===
+'''cadmio''' ''m''
+# [[cadmium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Cadmio]]
