--- a/wiki/paladio.wikitext
+++ b/wiki/paladio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|paladio|palladium}}
+== Spanish == {{wikipediaAlt|palladium}}
+=== Noun ===
+'''paladio''' ''m''
+# [[palladium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Paladio]]
