--- a/wiki/esta%C3%B1o.wikitext
+++ b/wiki/esta%C3%B1o.wikitext
@@ -1,1 +1,7 @@
-{{elemento|estaño|tin}}
+== Spanish == {{wikipediaAlt|tin}}
+=== Noun ===
+'''estaño''' ''m''
+# [[tin]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
