--- a/wiki/iodo.wikitext
+++ b/wiki/iodo.wikitext
@@ -1,1 +1,7 @@
-{{elemento|iodo|iodine}}
+== Spanish == {{wikipediaAlt|iodine}}
+=== Noun ===
+'''iodo''' ''m''
+# [[iodine]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
