--- a/wiki/indio.wikitext
+++ b/wiki/indio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|indio|indium}}
+== Spanish == {{wikipediaAlt|indium}}
+=== Noun ===
+'''indio''' ''m''
+# [[indium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
