--- a/wiki/teluro.wikitext
+++ b/wiki/teluro.wikitext
@@ -1,1 +1,7 @@
-{{elemento|teluro|tellurium}}
+== Spanish == {{wikipediaAlt|tellurium}}
+=== Noun ===
+'''teluro''' ''m''
+# [[tellurium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
