--- a/wiki/cesio.wikitext
+++ b/wiki/cesio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|cesio|cesium}}
+== Spanish == {{wikipediaAlt|cesium}}
+=== Noun ===
+'''cesio''' ''m''
+# [[cesium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Cesio]]
