--- a/wiki/bario.wikitext
+++ b/wiki/bario.wikitext
@@ -1,3 +1,9 @@
-{{elemento|bario|barium}}
+== Spanish == {{wikipediaAlt|barium}}
+=== Noun ===
+'''bario''' ''m''
+# [[barium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Bario]]
