--- a/wiki/lantano.wikitext
+++ b/wiki/lantano.wikitext
@@ -1,3 +1,9 @@
-{{elemento|lantano|lanthanum}}
+== Spanish == {{wikipediaAlt|lanthanum}}
+=== Noun ===
+'''lantano''' ''m''
+# [[lanthanum]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Lantano]]
