--- a/wiki/pagare.wikitext
+++ b/wiki/pagare.wikitext
@@ -1,10 +1,27 @@
 ==Italian==
+===Etymology===
+Latin ''[[pacare]]'' from ''[[pax]], pacis'' "peace"
 ===Transitive verb===
 '''pagare'''
 
 #to [[pay]]
 
+====Synonym====
+*[[offrire]]
+*[[sborsare]]
+*[[versare]]
+
 ===Intransitive verb===
 '''pagare'''
 
 #to [[pay]]
+
+===Related terms===
+*[[paga]]
+*[[pagabile]]
+*[[pagamento]]
+*[[pagante]]
+*[[pagatore]]
+*[[pagherò]]
+
+[[category:Italian verbs]]
