--- a/wiki/osmio.wikitext
+++ b/wiki/osmio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|osmio|osmium}}
+== Spanish == {{wikipediaAlt|osmium}}
+=== Noun ===
+'''osmio''' ''m''
+# [[osmium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Osmio]]
