--- a/wiki/hafnio.wikitext
+++ b/wiki/hafnio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|hafnio|hafnium}}
+== Spanish == {{wikipediaAlt|hafnium}}
+=== Noun ===
+'''hafnio''' ''m''
+# [[hafnium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
