--- a/wiki/tantalio.wikitext
+++ b/wiki/tantalio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|tantalio|tantalum}}
+== Spanish == {{wikipediaAlt|tantalum}}
+=== Noun ===
+'''tantalio''' ''m''
+# [[tantalum]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
