--- a/wiki/volframio.wikitext
+++ b/wiki/volframio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|volframio|tungsten}}
+== Spanish == {{wikipediaAlt|tungsten}}
+=== Noun ===
+'''volframio''' ''m''
+# [[tungsten]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
