--- a/wiki/renio.wikitext
+++ b/wiki/renio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|renio|rhenium}}
+== Spanish == {{wikipediaAlt|rhenium}}
+=== Noun ===
+'''renio''' ''m''
+# [[rhenium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Renio]]
