--- a/wiki/iridio.wikitext
+++ b/wiki/iridio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|iridio|iridium}}
+== Spanish == {{wikipediaAlt|iridium}}
+=== Noun ===
+'''iridio''' ''m''
+# [[iridium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
