--- a/wiki/talio.wikitext
+++ b/wiki/talio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|talio|thallium}}
+== Spanish == {{wikipediaAlt|thallium}}
+=== Noun ===
+'''talio''' ''m''
+# [[thallium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
