--- a/wiki/mercurio.wikitext
+++ b/wiki/mercurio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|mercurio|mercury}}
+== Spanish == {{wikipediaAlt|mercury}}
+=== Noun ===
+'''mercurio''' ''m''
+# [[mercury]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
