--- a/wiki/plomo.wikitext
+++ b/wiki/plomo.wikitext
@@ -1,1 +1,7 @@
-{{elemento|plomo|lead}}
+== Spanish == {{wikipediaAlt|lead}}
+=== Noun ===
+'''plomo''' ''m''
+# [[lead]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
