--- a/wiki/polonio.wikitext
+++ b/wiki/polonio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|polonio|polonium}}
+== Spanish == {{wikipediaAlt|polonium}}
+=== Noun ===
+'''polonio''' ''m''
+# [[polonium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Polonio]]
