--- a/wiki/rad%C3%B3n.wikitext
+++ b/wiki/rad%C3%B3n.wikitext
@@ -1,1 +1,7 @@
-{{elemento|radón|radon}}
+== Spanish == {{wikipediaAlt|radon}}
+=== Noun ===
+'''radón''' ''m''
+# [[radon]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
