--- a/wiki/astato.wikitext
+++ b/wiki/astato.wikitext
@@ -1,3 +1,9 @@
-{{elemento|astato|astatine}}
+== Spanish == {{wikipediaAlt|astatine}}
+=== Noun ===
+'''astato''' ''m''
+# [[astatine]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Astato]]
