--- a/wiki/actinio.wikitext
+++ b/wiki/actinio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|actinio|actinium}}
+== Spanish == {{wikipediaAlt|actinium}}
+=== Noun ===
+'''actinio''' ''m''
+# [[actinium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Actinio]]
