--- a/wiki/bohrio.wikitext
+++ b/wiki/bohrio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|bohrio|bohrium}}
+== Spanish == {{wikipediaAlt|bohrium}}
+=== Noun ===
+'''bohrio''' ''m''
+# [[bohrium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Bohrio]]
