--- a/wiki/cerio.wikitext
+++ b/wiki/cerio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|cerio|cerium}}
+== Spanish == {{wikipediaAlt|cerium}}
+=== Noun ===
+'''cerio''' ''m''
+# [[cerium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Cerio]]
