--- a/wiki/praseodimio.wikitext
+++ b/wiki/praseodimio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|praseodimio|praseodymium}}
+== Spanish == {{wikipediaAlt|praseodymium}}
+=== Noun ===
+'''praseodimio''' ''m''
+# [[praseodymium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Praseodimio]]
