--- a/wiki/neodimio.wikitext
+++ b/wiki/neodimio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|neodimio|neodymium}}
+== Spanish == {{wikipediaAlt|neodymium}}
+=== Noun ===
+'''neodimio''' ''m''
+# [[neodymium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Neodimio]]
