--- a/wiki/prometio.wikitext
+++ b/wiki/prometio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|prometio|promethium}}
+== Spanish == {{wikipediaAlt|promethium}}
+=== Noun ===
+'''prometio''' ''m''
+# [[promethium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Prometio]]
