--- a/wiki/samario.wikitext
+++ b/wiki/samario.wikitext
@@ -1,3 +1,9 @@
-{{elemento|samario|samarium}}
+== Spanish == {{wikipediaAlt|samarium}}
+=== Noun ===
+'''samario''' ''m''
+# [[samarium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Samario]]
