--- a/wiki/europio.wikitext
+++ b/wiki/europio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|europio|europium}}
+== Spanish == {{wikipediaAlt|europium}}
+=== Noun ===
+'''europio''' ''m''
+# [[europium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
