--- a/wiki/gadolinio.wikitext
+++ b/wiki/gadolinio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|gadolinio|gadolinium}}
+== Spanish == {{wikipediaAlt|gadolinium}}
+=== Noun ===
+'''gadolinio''' ''m''
+# [[gadolinium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
