--- a/wiki/terbio.wikitext
+++ b/wiki/terbio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|terbio|terbium}}
+== Spanish == {{wikipediaAlt|terbium}}
+=== Noun ===
+'''terbio''' ''m''
+# [[terbium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
