--- a/wiki/disprosio.wikitext
+++ b/wiki/disprosio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|disprosio|dysprosium}}
+== Spanish == {{wikipediaAlt|dysprosium}}
+=== Noun ===
+'''disprosio''' ''m''
+# [[dysprosium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Disprosio]]
