--- a/wiki/holmio.wikitext
+++ b/wiki/holmio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|holmio|holmium}}
+== Spanish == {{wikipediaAlt|holmium}}
+=== Noun ===
+'''holmio''' ''m''
+# [[holmium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
