--- a/wiki/erbio.wikitext
+++ b/wiki/erbio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|erbio|erbium}}
+== Spanish == {{wikipediaAlt|erbium}}
+=== Noun ===
+'''erbio''' ''m''
+# [[erbium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
