--- a/wiki/tulio.wikitext
+++ b/wiki/tulio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|tulio|thulium}}
+== Spanish == {{wikipediaAlt|thulium}}
+=== Noun ===
+'''tulio''' ''m''
+# [[thulium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
