--- a/wiki/iterbio.wikitext
+++ b/wiki/iterbio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|yterbio|ytterbium}}
+== Spanish == {{wikipediaAlt|ytterbium}}
+=== Noun ===
+'''yterbio''' ''m''
+# [[ytterbium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
