--- a/wiki/lutecio.wikitext
+++ b/wiki/lutecio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|lutecio|lutetium}}
+== Spanish == {{wikipediaAlt|lutetium}}
+=== Noun ===
+'''lutecio''' ''m''
+# [[lutetium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Lutecio]]
