--- a/wiki/neptunio.wikitext
+++ b/wiki/neptunio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|neptunio|neptunium}}
+== Spanish == {{wikipediaAlt|neptunium}}
+=== Noun ===
+'''neptunio''' ''m''
+# [[neptunium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Neptunio]]
