--- a/wiki/protactinio.wikitext
+++ b/wiki/protactinio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|protactinio|protactinium}}
+== Spanish == {{wikipediaAlt|protactinium}}
+=== Noun ===
+'''protactinio''' ''m''
+# [[protactinium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Protactinio]]
