--- a/wiki/plutonio.wikitext
+++ b/wiki/plutonio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|plutonio|plutonium}}
+== Spanish == {{wikipediaAlt|plutonium}}
+=== Noun ===
+'''plutonio''' ''m''
+# [[plutonium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Plutonio]]
