--- a/wiki/americio.wikitext
+++ b/wiki/americio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|americio|americium}}
+== Spanish == {{wikipediaAlt|americium}}
+=== Noun ===
+'''americio''' ''m''
+# [[americium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Americio]]
