--- a/wiki/berkelio.wikitext
+++ b/wiki/berkelio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|berkelio|berkelium}}
+== Spanish == {{wikipediaAlt|berkelium}}
+=== Noun ===
+'''berkelio''' ''m''
+# [[berkelium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Berkelio]]
