--- a/wiki/californio.wikitext
+++ b/wiki/californio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|californio|californium}}
+== Spanish == {{wikipediaAlt|californium}}
+=== Noun ===
+'''californio''' ''m''
+# [[californium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Californio]]
