--- a/wiki/einstenio.wikitext
+++ b/wiki/einstenio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|einstenio|einsteinium}}
+== Spanish == {{wikipediaAlt|einsteinium}}
+=== Noun ===
+'''einstenio''' ''m''
+# [[einsteinium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Einstenio]]
