--- a/wiki/fermio.wikitext
+++ b/wiki/fermio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|fermio|fermium}}
+== Spanish == {{wikipediaAlt|fermium}}
+=== Noun ===
+'''fermio''' ''m''
+# [[fermium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
