--- a/wiki/mendelevio.wikitext
+++ b/wiki/mendelevio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|mendelevio|mendelevium}}
+== Spanish == {{wikipediaAlt|mendelevium}}
+=== Noun ===
+'''mendelevio''' ''m''
+# [[mendelevium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Mendelevio]]
