--- a/wiki/nobelio.wikitext
+++ b/wiki/nobelio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|nobelio|nobelium}}
+== Spanish == {{wikipediaAlt|nobelium}}
+=== Noun ===
+'''nobelio''' ''m''
+# [[nobelium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Nobelio]]
