--- a/wiki/laurencio.wikitext
+++ b/wiki/laurencio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|laurencio|lawrencium}}
+== Spanish == {{wikipediaAlt|lawrencium}}
+=== Noun ===
+'''laurencio''' ''m''
+# [[lawrencium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Laurencio]]
