--- a/wiki/seaborgio.wikitext
+++ b/wiki/seaborgio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|seaborgio|seaborgium}}
+== Spanish == {{wikipediaAlt|seaborgium}}
+=== Noun ===
+'''seaborgio''' ''m''
+# [[seaborgium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
