--- a/wiki/darmstadtio.wikitext
+++ b/wiki/darmstadtio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|darmstadtio|darmstadtium}}
+== Spanish == {{wikipediaAlt|darmstadtium}}
+=== Noun ===
+'''darmstadtio''' ''m''
+# [[darmstadtium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
