--- a/wiki/dubnio.wikitext
+++ b/wiki/dubnio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|dubnio|dubnium}}
+== Spanish == {{wikipediaAlt|dubnium}}
+=== Noun ===
+'''dubnio''' ''m''
+# [[dubnium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Dubnio]]
