--- a/wiki/hassio.wikitext
+++ b/wiki/hassio.wikitext
@@ -1,1 +1,7 @@
-{{elemento|hassio|hassium}}
+== Spanish == {{wikipediaAlt|hassium}}
+=== Noun ===
+'''hassio''' ''m''
+# [[hassium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
