--- a/wiki/meitnerio.wikitext
+++ b/wiki/meitnerio.wikitext
@@ -1,3 +1,9 @@
-{{elemento|meitnerio|meitnerium}}
+== Spanish == {{wikipediaAlt|meitnerium}}
+=== Noun ===
+'''meitnerio''' ''m''
+# [[meitnerium]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish elements]]
 
 [[gl:Meitnerio]]
