~fr  [[calibre]] ''m'', ??? <template#37342>

--- a/wiki/template.wikitext
+++ b/wiki/template.wikitext
@@ -8,7 +8,7 @@
 *Chinese: [[模板]]
 *Dutch: [[sjabloon]] ''n'', [[malplaatje]] ''n''
 *Finnish: [[malline]], [[sapluuna]]
-*French: [[calibre]] ''m''
+*French: [[modèle]] ''m'' <!-- [[calibre]] ''m'', ???-->
 *Galician: [[Modelo]] ''m''
 *German: [[Schablone]] ''f''
 *Greek: [[πρότυπο]] ''n''
