--- a/wiki/pago.wikitext
+++ b/wiki/pago.wikitext
@@ -7,6 +7,11 @@
 
 # [[Beech]], a shade tree of the genus ''Fagus''.
 
+=== Translations ===
+*[[Basque]]: [http://eu.wiktionary.org/wiki/pago pago]  
+*[[English]]: [[beech]]  
+*[[German]]: [[Buche]] ''f'' 
+
 ----
 
 ==Italian==
