--- a/wiki/pagamento.wikitext
+++ b/wiki/pagamento.wikitext
@@ -1,7 +1,13 @@
 ==Italian==
+===Pronunciation===
+pagaménto, /pagaˈmento/, /<tt>paga"mento</tt>/
 ===Noun===
 '''pagamento''' (''plural'' '''pagamenti''')
 
 #[[payment]]
 
+===Related terms===
+*[[paga]]
+*[[pagare]]
+[[category:Italian nouns]]
 [[gl:Pagamento]]
