--- a/wiki/pago.wikitext
+++ b/wiki/pago.wikitext
@@ -8,7 +8,7 @@
 # [[Beech]], a shade tree of the genus ''Fagus''.
 
 === Translations ===
-*[[Basque]]: [http://eu.wiktionary.org/wiki/pago pago]  
+*[[Basque]]: pago  
 *[[English]]: [[beech]]  
 *[[German]]: [[Buche]] ''f'' 
 
@@ -33,4 +33,5 @@
 
 # (''archaic'') [[pay]], [[fee]]
 # (''archaic'') [[price]]
+
 [[eu:pago]]
