--- a/wiki/triskaidekaphobia.wikitext
+++ b/wiki/triskaidekaphobia.wikitext
@@ -26,9 +26,9 @@ From {{Gr.}} [[Δεκατρείς]] ''thirteen'' + [[-phobia]]
 *Esperanto:
 *Estonian:
 *Finnish:
-*French:
+*French: triskaidékaphobie
 *Frisian:
-*German:
+*German: triskaidekaphobie
 *Greek: triskaidekaphobia
 *Hebrew:
 *Hindi:
@@ -41,14 +41,14 @@ From {{Gr.}} [[Δεκατρείς]] ''thirteen'' + [[-phobia]]
 *Latin: triskaidekaphobia
 *Mandarin:
 *Nepalese:
-*Norwegian:
+*Norwegian: triskaidekafobie
 *Polish:
 *Portuguese:
 *Romanian:
 *Scottish:
 *Sardinian:
 *Slovakian:
-*Slovene:
+*Slovene: triskaidekafobi
 *Spanish: triscadecafobia
 *Swahili:
 *Swedish:
