--- a/wiki/star.wikitext
+++ b/wiki/star.wikitext
@@ -8,7 +8,9 @@
 #A celebrity or noteworthy performer.
 
 ==== Translations ====
+*Afrikaans:  [[ster]]
 *Albanian: [[yll]]
+*Arabic:  نجمة [[najma]]
 *Breton: [[steredenn]] ''f'' -où (1,3), [[stered]] ''collective noun'' -enn ''singular f'' (1)
 *Catalan: [[estrella]] ''f'', [[estel]] ''m''
 *[[Chinese]]: [[星]]
@@ -31,6 +33,7 @@
 *Japanese: [[星]] ([[ほし]], hoshi), [[恒星]] (こうせい, kousei) (1)
 *Korean: [[별]] (byeol)
 *Latin: [[stella]] ''f''
+*Maltese:  [[niġma]]
 *Persian: [[ستاره]] (setareh)
 *Polish: [[gwiazda]] ''f''
 *Portuguese: [[estrela]] ''f'' (1,2,3); [[astro]] ''m'' (2,3)
