added danish <dove#6849>

--- a/wiki/dove.wikitext
+++ b/wiki/dove.wikitext
@@ -13,6 +13,7 @@
 *[[Cebuano]]: [[pati]]
 *{{zh}} (simplified): [[鸽]]子
 *{{zh}} (traditional): [[鴿]]子
+*Danish: [[due]]
 *Dutch: [[duif]] ''f''
 *Finnish: [[kyyhky]], [[pulu]]
 *French: [[colombe]] ''f''
