arabic, afrikaans, maltese, frisian <man#1796>

--- a/wiki/man.wikitext
+++ b/wiki/man.wikitext
@@ -20,6 +20,8 @@ Some believe that this root derives from an Indo-European base word for [[mind]]
 # A piece used in board games such as [[draughts]] ([[checkers]]) or [[chess]].
 
 ====Translations====
+*Arabic:  [[رجل]]1  , 2[[انسان]]
+*Afrikaans:  [[man]] (1), [[mens]] (2)
 *[[Bosnian]]: [[čovjek]] ''m'', [[muž]] ''m''
 *[[Basque]]: [[gizon]], [[gizaseme]], [[gizonki]]
 *[[Breton]]: [[gwaz]] ''m'', [[den]] ''m'' (1), [[den]] (2)
@@ -34,7 +36,7 @@ Some believe that this root derives from an Indo-European base word for [[mind]]
 *{{fj}}: [[turaga]] (1) ([[:fj:turaga|Vosa Vaka Viti]])
 *Finnish: [[mies]] (1); [[ihminen]] (2); [[nappula]], [[pelinappula]] (3)
 *French: [[homme]] ''m'' (1, 2)
-*[[Frisian]]: man ''m'' (1)
+*[[Frisian]]: man (1) ''m'', minske (2)
 *Georgian: [[კაცი]] (k’aci)
 *German: [[Mann]] ''m'' [[:de:Mann|(de)]] (1), [[Herr]] ''m'' (1), [[Mensch]] ''m'' (2), [[Stein]] ''m'' (3), [[Spielfigur]] ''f'' (3)
 *Greek, Ancient: [[ἀνήρ]] (anēr, 1), [[ἄνθρωπος]] (anthrōpos, 2)
@@ -55,6 +57,7 @@ Some believe that this root derives from an Indo-European base word for [[mind]]
 *Latin: [[vir]], -i ''m'' (1), [[homo]], -inis ''m'' (2)
 *[[Lojban]]: [[nanmu]] (1), [[remna]] (2)
 *Manx: [[fer#Manx|fer]] (1)
+*Maltese:  [[raġel]] (1), [[bniedem]] (2)
 *{{nv}}: [[diné]]
 *Norwegian: [[mann]] (1), [[menneske]] (2)
 *Central Sierra [[Miwok]]: [[naŋˑa-]]
