--- a/wiki/man.wikitext
+++ b/wiki/man.wikitext
@@ -79,6 +79,7 @@ Some believe that this root derives from an Indo-European base word for [[mind]]
 *[[Tupinambá]]: [[abá]] (1, 2)
 *[[Turkish]]: [[adam]] (1), [[erkek]](1), [[insan]] (2), [[taş]] (3)
 *{{cy}}: [[dyn]] ''m'' (1)
+*Yiddish:  [[man]] (1), [[mentsh]] (2)
 
 ===Derived terms===
 *[[mankind]]
