--- a/wiki/man.wikitext
+++ b/wiki/man.wikitext
@@ -20,8 +20,8 @@ Some believe that this root derives from an Indo-European base word for [[mind]]
 # A piece used in board games such as [[draughts]] ([[checkers]]) or [[chess]].
 
 ====Translations====
-*Arabic:  [[رجل]]1  , 2[[انسان]]
-*Afrikaans:  [[man]] (1), [[mens]] (2)
+*Arabic:  [[رجل]] rajul (1), [[انسان]] insan (2)
+*Afrikaans: [[man]] (1), [[mens]] (2)
 *[[Bosnian]]: [[čovjek]] ''m'', [[muž]] ''m''
 *[[Basque]]: [[gizon]], [[gizaseme]], [[gizonki]]
 *[[Breton]]: [[gwaz]] ''m'', [[den]] ''m'' (1), [[den]] (2)
