cleaned up, added AHD pronunciation <triskaidekaphobia#36151>

--- a/wiki/triskaidekaphobia.wikitext
+++ b/wiki/triskaidekaphobia.wikitext
@@ -1,13 +1,10 @@
 {{wikipedia}}
 ==English==
 ===Pronunciation===
+*{{AHD|/trĭs'kī-dĕk'ə-fō'bē-ə/}}
 
-'''tris*kai-de*ka-pho*bi-a'''
-*[[IPA]]: //
-*[[SAMPA]]: //
-TRIS-keh-DEH-ka-PHO-bee-a
 ===Etymology===
-From {{Gr.}} [[Δεκατρείς]] ''thirteen'' + [[-phobia]]
+From {{Gr.}} '''''[[Δεκατρείς]]''''', thirteen + [[-phobia]]
 
 === Noun ===
 [[Category:English nouns]]
@@ -15,47 +12,10 @@ From {{Gr.}} [[Δεκατρείς]] ''thirteen'' + [[-phobia]]
 #[[Fear]], [[hate]], or [[dislike]] of the number [[thirteen]] (13).
 
 ====Translations====
-
-*Arabic:
-*Basque:
-*Bulgarian:
-*Catalan:
-*Czech:
-*Danish:
-*Dutch:
-*Esperanto:
-*Estonian:
-*Finnish:
 *French: triskaidékaphobie
-*Frisian:
 *German: triskaidekaphobie
 *Greek: triskaidekaphobia
-*Hebrew:
-*Hindi:
-*Hungarian:
-*[[Interlingua]]:
-*Irish:
-*Italian:
-*Japanese:
-*Korean:
 *Latin: triskaidekaphobia
-*Mandarin:
-*Nepalese:
 *Norwegian: triskaidekafobie
-*Polish:
-*Portuguese:
-*Romanian:
-*Scottish:
-*Sardinian:
-*Slovakian:
 *Slovene: triskaidekafobi
 *Spanish: triscadecafobia
-*Swahili:
-*Swedish:
-*Taiwanese:
-*Ukrainian:
-*Urdu:
-*Vietnamese:
-*[[Waloon]]
-*Welsh:
-*Zulu:
