--- a/wiki/woman.wikitext
+++ b/wiki/woman.wikitext
@@ -18,6 +18,7 @@ From [[Old English]] [[wíf]] (adult female, [[Modern English]] [[wife]]) and [[
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Afrikaans: [[vrou]]
 *Albanian: [[Grua]], [[femër]]
 *Arabic: [[مرأة]] (marʔa)
 *Aragonese: [[muller]] ''f''
@@ -35,6 +36,7 @@ From [[Old English]] [[wíf]] (adult female, [[Modern English]] [[wife]]) and [[
 *{{fj}}: [[marama]] ([[:fj:marama|Vosa Vaka Viti]])
 *Finnish: [[nainen]]
 *French: [[femme]] ''f''
+*Friesian:  [[frou]]
 *German: [[Frau]] ''f'' [[:de:Frau|(de)]]
 *Guarani: [[kuña]]
 *Hebrew: [[אישה]] ''f''
@@ -55,6 +57,7 @@ From [[Old English]] [[wíf]] (adult female, [[Modern English]] [[wife]]) and [[
 *Lithuanian: [[moteris]] ''f''
 *[[Malayalam]]: [[sthree]], [[wanitha]]
 *Manx: [[ben#Manx|ben]] ''f''
+*Maltese: [[mara]]
 *Norwegian: [[kvinne]]
 *[[Persian]]: [[زَن]] (zæn)
 *Polish: [[kobieta]] ''f''
@@ -69,6 +72,7 @@ From [[Old English]] [[wíf]] (adult female, [[Modern English]] [[wife]]) and [[
 *Tupinambá: [[kunhã]]
 *Turkish: [[kadın]]
 *{{cy}}: [[dynes]] ''f''
+*Yiddish: [[froy]] ''f''
 |}
 |}
 
