--- a/wiki/dust_bunny.wikitext
+++ b/wiki/dust_bunny.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 '''[[dust]] [[bunny]]'''
-# a small [[clump]] of [[dust]], [[fluff]] and [[particle]]s of [[skin]] etc that tends to [[accumulate]] in a [[domestic]] [[environment]] in places that are not [[dusted]]; reputed to be held together by [[static electricity]]
+# a small [[clump]] of [[dust]], [[fluff]], [[particle]]s of [[skin]], or et cetera that tends to [[accumulate]] in a [[domestic]] [[environment]] in places that are not [[dusted]]; reputed to be held together by [[static electricity]]
