--- a/wiki/sun.wikitext
+++ b/wiki/sun.wikitext
@@ -7,7 +7,7 @@
 ===Homophone===
 *[[son]]
 
-==={{Abbreviation}}===
+===Abbreviation===
 '''Sun.'''
 # [[Sunday]].
 
@@ -20,22 +20,12 @@ From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne
 
 ====Translations====
 
-{| border=0 width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--left column-->
+{{top}}
 *Finnish: [[Aurinko]] ([[:fi:Aurinko|Suomi]])
 *German: [[Sonne]] [[:de:Sonne|de]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--right column-->
+{{mid}}
 *Japanese: [[太陽]] ([[たいよう]], taiyō)
-|}
-|}
-
+{{bottom}}
 ===Noun===
 '''sun'''
 # A [[star]], especially when seen as the centre of any single [[solar system]].
@@ -65,6 +55,7 @@ From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne
 *[[solar eclipse]]
 
 ====Translations====
+{{top}}
 *[[Albanian]]: [[diell]] ''m''
 *[[Arabic]]: [[شمس]] (shams)
 *[[Armenian]]: [[արեւ]] (arev)
@@ -93,6 +84,7 @@ From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne
 *[[Indonesian]]: [[matahari]], [[surya]], [[mentari]]
 *[[Interlingua]]: [[sol]]
 *Italian: [[sole]] ''m''
+{{mid}}
 *Japanese: [[太陽]] ([[たいよう]], taiyō) / [[日]] ([[ひ]], hi)
 *[[Korean]]: [[해]] (hae), [[태양]] [太陽] (taeyang)
 *[[Kurdish]]: [[roj]], [[tav]]
@@ -122,6 +114,7 @@ From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne
 *[[Tupinambá]]: [[kûarasy]]
 *[[Turkish]]: [[güneş]]
 *[[Welsh]]: [[haul]] ''m''
+{{bottom}}
 
 [[hu:sun]]
 [[pl:Sun]]
