/* Noun */ corrected spelling of granting <one-way ticket#98591>

--- a/wiki/one-way_ticket.wikitext
+++ b/wiki/one-way_ticket.wikitext
@@ -3,7 +3,7 @@
 See [[one-way]]
 
 ===Noun===
-#A ticket granding permission to travel to a place but not back
+#A ticket granting permission to travel to a place but not back
 
 ====Antonym====
 *[[round-trip ticket]]
