--- a/wiki/onion.wikitext
+++ b/wiki/onion.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Etymology===
 Latin ''[[unio]]'' (doublet with [[union]]?)
+===Pronunciation===
+/ˈʌnjən/, /<tt>"Vnj@n</tt>/
 ===Noun===
 '''onion''' (plural: [[onions]])
 
@@ -21,6 +23,7 @@ Latin ''[[unio]]'' (doublet with [[union]]?)
 *[[Hausa]]: [[àlbásà]]
 *Hebrew: [[בצל]] ''m''
 *Hungarian: [[hagyma]] 
+*Italian: [[cipolla]]
 *Japanese: [[たまねぎ]]
 *[[KiSwahili]]: [[kitunguu]]
 *Polish: [[cebula]] ''f''
