Added Tennessee <contempt of Congress#2863632>

--- a/wiki/contempt_of_Congress.wikitext
+++ b/wiki/contempt_of_Congress.wikitext
@@ -8,5 +8,7 @@ From time to time, Congress lodges contempt of Congress charges against members 
 
 For example, [[Henry Kissinger]], [[James G. Watt|James Watt]], and [[Janet Reno]] have all been cited by Congress for contempt, though in all these cases the Congress and the executive branch subsequently reached an agreement on the delivery of documents before the matter reached a grand jury.  In cases involving delivery of documents, Congress currently seems to view contempt of Congress as a tool to reach an agreement with the executive branch, rather than as a law to punish the contemptuous.
 
-Various U.S. states have statewide contempt of Congress crimes on the books, in those cases for obstructing the work of the [[state legislature]].
-[[Category:Legislative Branch of the United States Government]][[Category:United States law]]
+Various U.S. states have statewide contempt of Congress crimes on the books, in those cases for obstructing the work of the [[state legislature]]. [[Tennessee Constitution|Tennessees Constitution]] is an example of this.
+
+[[Category:Legislative Branch of the United States Government]]
+[[Category:United States law]]
